# notifydb

./: .env  .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.sh  flutter_build.sh  notifydb.code-workspace  settings.toml  test.db
crates/notifydb/: Cargo.toml  analysis_options.yaml  build.rs  pubspec.yaml
crates/notifydb/.run/: Run.run.xml
crates/notifydb/assets/models/: notification_data.json
crates/notifydb/lib/: NotifyDBApp.dart  main.dart  main_window.dart
crates/notifydb/lib/assets/models/: settings_data.json
crates/notifydb/lib/controllers/: category_controller.dart  controller.dart  data_controller.dart  database_controller.dart  logging_controller.dart  main_controller.dart  platform.dart  table_controller.dart
crates/notifydb/lib/home/: notification_data.dart  notification_model.dart
crates/notifydb/lib/model/: app_settings.dart  settings_data.dart  settings_data.freezed.dart  settings_data.g.dart
crates/notifydb/lib/models/: notification_model.dart
crates/notifydb/lib/pages/: file_open_dialog.dart  flutter_plugins.dart  menu.dart  modal_window.dart  other_window.dart  platform_channels.dart  window_management.dart
crates/notifydb/lib/services/: app_services.dart
crates/notifydb/lib/utils/: ColorUtil.dart  bool_parsing.dart  logger.dart
crates/notifydb/lib/view/: category_view.dart  home_view.dart  notificationdata.dart  settings_flap.dart
crates/notifydb/lib/widgets/: adw_custom_combo_button.dart  adw_custom_combo_row.dart  adw_custom_flap.dart  adw_custom_text_field.dart  animated_toggle.dart  custom_flap_controller.dart  custom_slide_hide.dart  message_details.dart  page.dart  side_menu.dart  table_view.dart
crates/notifydb/lib/widgets/table/: custom_code_box.dart  custom_column_menu.dart  custom_footer.dart  highlight_theme.dart  message_details.dart  message_text_filter.dart  sender_name_filter.dart  table_header.dart  table_view.dart  title_text_filter.dart
crates/notifydb/lib/windows/: main_view.dart
crates/notifydb/linux/: CMakeLists.txt  my_application.cc
crates/notifydb/src/: database_channels.rs  logging_channels.rs  main.rs  settings_channels.rs  window_channels.rs
crates/notifydb/test/: widget_test.dart
crates/notifydb_listener/: Cargo.toml
crates/notifydb_listener/src/: main.rs
crates/notifydblib/: Cargo.toml
crates/notifydblib/src/: lib.rs  schema.rs
migrations/: create_db.sql
migrations/20170124012402_add_notification/: down.sql  up.sql
migrations/2022-02-22-045254_updates/: up.sql
migrations/2022-02-22-151801_index/: down.sql  up.sql
src/: schema.rs
test/: widget_test.dart
test_items/: notification_insert_test.sh
