[package]
  name    = "notifydb"
  version = "0.0.1"
  authors = ["instance.id <dan@instance.id>"]
  edition = "2018"
  build   = "./build.rs"
  exclude = [".lh/", ".history/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cargo-emit        = "0.2.1"
nativeshell_build = { version = "0.1.13" }

[dependencies]
nativeshell = { version = "0.1.13" }
env_logger  = "0.9.0"

dbus  = "0.9.5"
serde = { version = "1.0.119", features = ["derive"] }

serde_json  = "1.0"
chrono      = "0.4"
dotenv      = "0.15"
lazy_static = "1.4.0"
diesel      = { version = "1.4.0", features = ["sqlite", "chrono"] }
notifydblib = { version = "0.0.1", path = "../notifydblib" }

# --| Platform configuration -----------------
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc  = "0.2.7"
block = "0.1.6"

[target.'cfg(target_os = "windows")'.dependencies]
widestring = "0.5.1"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version  = "0.32.0"
features = [
    "Win32_UI_Controls_Dialogs"
]

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.14.3"
