[package]
  name    = "notifydb"
  version = "0.0.1"
  authors = ["instance.id <dan@instance.id>"]
  edition = "2018"
  build   = "./build.rs"
  exclude = [".lh/", ".history/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cargo-emit        = "0.2.1"
nativeshell_build = { git = "https://github.com/nativeshell/nativeshell" }

[dependencies]
nativeshell = { git = "https://github.com/nativeshell/nativeshell" }
env_logger  = "0.9.0"
log = "0.4.14"

dbus  = "0.9.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_derive = "1.0.136"
config = "0.11.0"

serde_json  = "1.0.79"
chrono      = "0.4.19"
dotenv      = "0.15.0"
lazy_static = "1.4.0"
diesel      = { version = "1.4.8", features = ["sqlite", "chrono"] }
notifydblib = { version = "0.0.1", path = "../notifydblib" }

# --| Platform configuration -----------------
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.0"
objc  = "0.2.7"
block = "0.1.6"

[target.'cfg(target_os = "windows")'.dependencies]
widestring = "0.5.1"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version  = "0.33.0"
features = [
    "Win32_UI_Controls_Dialogs"
]

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "^0.14"
