[package]
name = "notifydb_listener"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tray_icon"]
tray_icon = ["gtk", "tray-item", "cmd_lib"]

[dependencies]
dbus = "0.9.5"
chrono = "0.4.19"
dotenv = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.14"
notifydblib = { version = "0.0.1", path = "../notifydblib" }
simplelog = { version = "0.11.2", features = ["paris"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "^0.14", optional = true }
tray-item = { version = "0.6.0", optional = true }
cmd_lib = { version = "1.3.0", optional = true }
